@@ -4,6 +4,7 @@
 	added optional parameters with selection
 	removed --no-flash-opt-args
 	changed in SWF packages handling
+	fixed optional leading comma in anonymous object and array values
 
 2006-06-08: 1.02
 	fixed stack overflow when recursive class <: recursive signature
